<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/labelapp"
        android:textAlignment="center"
        android:textColor="@color/judul"
        android:textSize="35sp"
        android:textStyle="bold"/>
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                android:layout_width="134dp"
                android:layout_height="wrap_content"
                android:text="@string/nama"
                android:textColor="@color/label"
                android:textSize="20sp"/>
            <EditText
                android:id="@+id/edNama"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:ems="10"
                android:hint="@string/masukkan_nama"
                android:inputType="textPersonName"
                android:textColor="@color/txt"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="134dp"
                android:layout_height="wrap_content"
                android:text="@string/alamat"
                android:textColor="@color/label"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edAlamat"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:ems="10"
                android:hint="@string/masukkan_alamat"
                android:inputType="textPersonName"
                android:textColor="@color/txt"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="134dp"
                android:layout_height="wrap_content"
                android:text="@string/notlp"
                android:textColor="@color/label"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edNoTel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/masukkan_notlp"
                android:inputType="phone"
                android:textColor="@color/phone" />


        </TableRow>
    </TableLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp"
            android:gravity="bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/btDaftar"
                android:layout_width="150dp"
                android:layout_height="49dp"
                android:layout_gravity="end"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/btn"
                android:text="@string/daftar" />
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>